<resources>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="dal_app_name">دال</string>
    <string name="action_settings">الإعدادات</string>
    <string name="next">التالي</string>
    <string name="previous">السابق</string>
    <string name="title_home">الرئيسية</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="send_enquiry">ٍارسل استفسارك</string>
    <string name="send">إرسال</string>
    <string name="explore">تصفح</string>
    <string name="freelancers">مقدمي الخدمات</string>
    <string name="projects">الخدمات</string>
    <string name="registeration_of_new_user">تسجيل مستخدم جديد</string>
    <string name="general_informations">معلومات عامة</string>
    <string name="username">اسم المستخدم</string>
    <string name="first_name">الاسم الأول</string>
    <string name="last_name">الاسم الأخير</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="email">البريد الشبكي</string>
    <string name="otp">رمز التحقق</string>
    <string name="about_the_user">نبذة عن المستخدم</string>
    <string name="domains_and_experience">المجالات والخبرات</string>
    <string name="add_experience">إضافة خبرات</string>
    <string name="domains">المجالات</string>
    <string name="content_writing">كتابة محتوى</string>
    <string name="language_translation">ترجمة</string>
    <string name="naqrahah">النقرحة</string>
    <string name="add_previous_works">إضافة أعمال سابقة</string>
    <string name="work_description">وصف العمل</string>
    <string name="add_a_file">إضافة ملف</string>
    <string name="education">التعليم</string>
    <string name="certificate_type">نوع الشهادة</string>
    <string name="join_date">تاريخ الالتحاق</string>
    <string name="institute_name">اسم الجامعة</string>
    <string name="add_certificate_file">إضافة شهادة</string>
    <string name="add_a_cert">إضافة شهادة</string>
    <string name="select_account_type">اختيار نوع الحساب</string>
    <string name="register_as_a_beneficiary">التسجيل كمستفيد</string>
    <string name="register_as_freelancer">ٌالتسجيل كمستقل</string>
    <string name="this_field_is_required">هذا الحقل مطلوب</string>
    <string name="sign_up">تسجيل جديد</string>
    <string name="you_don_t_have_an_account">ليس لديك حساب؟</string>
    <string name="please_log_in">تسجيل الدخول</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="skip">تخطي</string>
    <string name="in_valid_email_ddress">بريد شبكي غير صحيح</string>
    <string name="password_mismatch">كلمتا المرور غير متطابقتان</string>
    <string name="phone_number_is_not_valid">رقم الجوال غير صحيح</string>
    <string name="email_is_already_registered">البريد الشبكي مسجل مسبقاً، قم بتسجيل الدخول أو استعادة الحساب إذا نسيت كلمة المرور</string>
    <string name="speciality">تخصص</string>
    <string name="search_result">نتيجة بحث</string>
    <string name="search_results">نتائج البحث</string>
    <string name="classification_by">تصفية الخدمات</string>
    <string name="search_by_key_words">البحث بواسطة الكلمات المفتاحية</string>
    <string name="service">الخدمة</string>
    <string name="project_name">اسم الخدمة</string>
    <string name="riyals">ريالات</string>
    <string name="riyal">ر.س</string>
    <string name="duration">المدة المطلوبة</string>
    <string name="project_category">تصنيف الخدمة</string>
    <string name="project_description">وصف الخدمة</string>
    <string name="milestone">وقت التسليم</string>
    <string name="location">الموقع</string>
    <string name="search">بحث</string>
    <string name="send_quotation">إرسال عرض</string>
    <string name="project_details">تفاصيل الخدمة</string>
    <string name="fixed_price">سعر ثابت</string>
    <string name="quotaions">عدد العروض: </string>
    <string name="registration">التسجيل</string>
    <string name="live_chat">الحوار المباشر</string>
    <string name="common_questions">الأسئلة الشائعة</string>
    <string name="enquiries">تواصل معنا</string>
    <string name="name">الاسم</string>
    <string name="enquiry">الاستفسار</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="register_now">إنشاء حساب</string>
    <string name="ok">موافق</string>
    <string name="your_profile">ملفك الشخصي</string>
    <string name="user_profile">الملف التعريفي</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="acomplished_projects">مشروع منفذ</string>
    <string name="evaluation">التقييم</string>
    <string name="about_dal">عن منصة دال</string>
    <string name="clear_results">مسح النتائج</string>
    <string name="tashkeel_and_auditing">تشكيل وتدقيق</string>
    <string name="linguistic_auditing">تدقيق لغوي</string>
    <string name="content_formulation">صياغة محتوى</string>
    <string name="research">بحث</string>
    <string name="freelancer_level">مستوى مقدم الخدمة</string>
    <string name="client_rating">تقييم طالب الخدمة</string>
    <string name="_1_3_days">1 - 3 أيام</string>
    <string name="_1_week">أسبوع</string>
    <string name="_1_3_weeks">1 - 3 أسابيع</string>
    <string name="less_than_year">أقل من سنة</string>
    <string name="_1_5_days">1 - 5 أيام</string>
    <string name="_6_months">6 أشهر</string>
    <string name="_1_month">شهر</string>
    <string name="_2_3_months">2 - 3 شهور</string>
    <string name="active">نشط</string>
    <string name="distinguished">متميز</string>
    <string name="experienced">متمرس</string>
    <string name="professional">محترف</string>
    <string name="filter">تصفية</string>
    <string name="personal_information">المعلومات الشخصية</string>
    <string name="editing_personal_info">تعديل المعلومات الشخصية</string>
    <string name="favourite">المفضلة</string>
    <string name="wallet">المحفظة</string>
    <string name="projects_management">إدارة الخدمات</string>
    <string name="revisions">التقييمات</string>
    <string name="add_a_project">طلب خدمة</string>
    <string name="technical_support">الدعم الفني</string>
    <string name="technical_support_tickets">طلبات الدعم الفني</string>
    <string name="remember_me">تذكرني</string>
    <string name="did_you_forget_your_password">هل نسيت كلمة المرور؟</string>
    <string name="resetting_the_password">إعادة ضبط كلمة المرور</string>
    <string name="forgetting_the_password">نسيت كلمة المرور</string>
    <string name="send_password_reset_email">إرسال</string>
    <string name="enter_your_e_mail_address_to_reset_the_password">اكتب بريدك الشبكي لاستعادة كلمة المرور</string>
    <string name="enter_the_new_password">اكتب كلمة المرور الجديدة</string>
    <string name="back">عودة</string>
    <string name="client">طالب خدمة</string>
    <string name="the_password_must_consist_of_8_characters">يجب أن تتكون كلمة المرور من 8 أحرف فأكثر</string>
    <string name="password_must_have_at_least_one_uppercase_character">" يجب أن تتكون كلمة المرور من أحرف كبيرة وصغيرة"</string>
    <string name="password_must_have_at_least_one_digit_character">يجب أن تحتوي كلمة المرور على رقم واحد على الأقل</string>
    <string name="password_must_have_at_least_one_special_character">كلمة المرور يجب أن تحتوى على أحرف خاصة (.!@#$%،،،)</string>
    <string name="something_went_wrong_please_try_again_later">"هنالك خطأ، نرجو المحالولة لاحقاً،،، "</string>
    <string name="project_period">المدة المتوقعة لإنجاز الخدمة</string>
    <string name="service_type">نوع الخدمة</string>
    <string name="publication_date">تاريخ النشر: </string>
    <string name="project_domains">المجال</string>
    <string name="number_of_offers">عدد العروض المقدمة</string>
    <string name="offers">طلب مقدم</string>
    <string name="price">السعر</string>
    <string name="send_a_quotation">إرسال عرض سعر</string>
    <string name="freelancers_comments">استفسارات مقدمي الخدمات</string>
    <string name="post_a_comment">إرسال إستفسار</string>
    <string name="project_title">عنوان الخدمة</string>
    <string name="domain">الخدمة المقدمة</string>
    <string name="about_the_project">نبذة عن الخدمة</string>
    <string name="detailed_description_about_the_project">وصف مفصل للخدمة</string>
    <string name="expected_price">قيمة الخدمة المتوقعة بالريال السعودي</string>
    <string name="number_of_quotaions">عدد العروض المرغوب استقبالها</string>
    <string name="project_milestone">المدة المتوقعة لإنجاز المشروع بالأيام</string>
    <string name="freelancers_level">تصنيف مقدمي الخدمات</string>
    <string name="send_the_bid">إرسال الطلب</string>
    <string name="public_bid">عام \n تقديم طلب عام لجميع مقدمي الخدمات</string>
    <string name="private_bid">خاص \n تقديم طلب خاص لمقدمي خدمات محددين</string>
</resources>