<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/user"
        android:title="@string/your_profile" />
    <item
        android:id="@+id/notifcation"
        android:icon="@drawable/bell"
        android:title="@string/title_home" />
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/magnifier"
        android:title="@string/explore" />
    <item
        android:id="@+id/contactUsFragment"
        android:icon="@drawable/tech_support"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/title_home" />




</menu>