<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fragment_content"
    android:paddingBottom="@dimen/system_nav_bar"
    tools:context=".ui.fragments.auth.UserLoginFragment">


    <LinearLayout
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_5_curved_borders_gray_filled"
        android:orientation="horizontal"
        android:text="@string/sign_up"
        android:textColor="@color/accent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/loginCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signInBtn"
            style="@style/material_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_8_curved_borders_accent_filled"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

<!--        <TextView-->
<!--            android:id="@+id/sign_up_TV"-->
<!--            style="@style/material_textView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:padding="8dp"-->
<!--            android:text="@string/sign_up"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--                <com.google.android.material.textfield.TextInputLayout-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="match_parent"-->
        <!--                    android:layout_margin="4dp">-->

        <!--                    <com.google.android.material.textfield.TextInputEditText-->
        <!--                        android:id="@+id/email_IET"-->
        <!--                        android:layout_width="match_parent"-->
        <!--                        android:layout_height="wrap_content"-->
        <!--                        android:drawableStart="@drawable/message"-->
        <!--                        android:drawablePadding="3dp"-->
        <!--                        android:fontFamily="@font/sakkal_majalla"-->
        <!--                        android:hint="البريد الالكتروني"-->
        <!--                        android:inputType="textWebEmailAddress"-->
        <!--                        android:textSize="18dp" />-->
        <!--                </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            style="@style/TextInputLayout"
            app:endIconTintMode="multiply"
            app:startIconDrawable="@drawable/icon_email"
            app:startIconTintMode="src_atop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_IET"
                style="@style/TextInputEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_TIL"
            style="@style/TextInputLayout"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/icon_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_IET"
                style="@style/TextInputEditText"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp">

            <CheckBox
                android:id="@+id/rememberMeCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resetPasswordTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="4dp"
                android:text="@string/did_you_forget_your_password"
                android:textColor="@color/accent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/reset_password_TV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/accent"
            android:text="@string/sign_in"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView40"
                style="@style/material_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ليس لديك حساب؟"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sign_up_TV"
                style="@style/material_textButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="إنشاء حساب"
                android:textColor="@color/accent"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>