<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg_color"
    tools:context=".ui.fragments.profiles.UserProfileFragment">


    <LinearLayout
        android:id="@+id/custom_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/profileHeader"
            android:layout_width="0dp"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:background="@color/accent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/status_bar_size">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_padding">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/userIV"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="@color/white"
                    android:scaleType="centerInside"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/white"
                    app:shapeAppearanceOverlay="@style/circular"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/freelancer_male_png" />

                <ImageView
                    android:id="@+id/editPhotoIV"
                    android:layout_width="20dp"
                    android:layout_height="20dp"

                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/camera_icon"

                    app:layout_constraintBottom_toBottomOf="@id/userIV"
                    app:layout_constraintEnd_toEndOf="@id/userIV"

                   />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/list_item_margin_padding"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/list_item_margin_padding">

                <TextView
                    android:id="@+id/nameTV"
                    style="@style/material_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="@dimen/list_item_margin_padding"
                    android:text="عبد الله الغامدي"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:padding="4dp">



                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/small_rating_bar_on_accent_bg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/list_item_margin_padding"
                        android:foregroundTint="@color/white"
                        android:rating="5" />

                    <TextView
                        style="@style/small_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:padding="0dp"
                        android:text="("
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/reviewNumberTV"
                        style="@style/small_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:padding="0dp"
                        android:text="0"
                        android:textColor="@color/white" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"

                        android:text=")"
                        android:textColor="@color/white" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/status_bar_size">

            <ImageButton
                android:id="@+id/login_out_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:backgroundTint="@color/accent"
                android:src="@drawable/sign_out" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_padding"
        android:orientation="vertical"
        android:background="@color/fragment_bg_color"
        android:padding="@dimen/default_margin_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_app_bar">


        <TextView
            android:id="@+id/personal_information_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_padding"
            android:padding="4dp"
            android:text="الصفحة الشخصية"
            android:textColor="@color/accent"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/personal_info_edit_btn"
            style="@style/sub_title_textView"
            android:layout_margin="@dimen/default_margin_padding"
            android:background="@drawable/bg_20_curved_light_gray_borders_white_filled"
            android:clickable="true"
            android:elevation="5dp"
            android:padding="10dp"
            android:text="@string/personal_information"
            android:textSize="@dimen/sub_title_text_size"
            app:drawableEndCompat="@drawable/round_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/icon_personal_info"
            android:focusable="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/favourites_btn"
            style="@style/sub_title_textView"
            android:layout_margin="@dimen/default_margin_padding"
            android:background="@drawable/bg_20_curved_light_gray_borders_white_filled"
            android:elevation="5dp"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/favourite"
            android:textSize="@dimen/sub_title_text_size"
            app:drawableEndCompat="@drawable/round_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/icon_heart" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/wallet_btn"
            style="@style/sub_title_textView"
            android:layout_margin="@dimen/default_margin_padding"
            android:background="@drawable/bg_20_curved_light_gray_borders_white_filled"
            android:elevation="5dp"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/wallet"
            android:textSize="@dimen/sub_title_text_size"
            app:drawableEndCompat="@drawable/round_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/icon_wallet" />


        <TextView
            android:id="@+id/personal_information_tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_padding"
            android:padding="4dp"
            android:text="@string/projects"
            android:textColor="@color/accent"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/projectsManagement_btn"
            style="@style/sub_title_textView"
            android:layout_margin="@dimen/default_margin_padding"
            android:background="@drawable/bg_20_curved_light_gray_borders_white_filled"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/projects_management"
            android:textSize="@dimen/sub_title_text_size"
            app:drawableEndCompat="@drawable/round_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/icon_personal_info" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reviews_btn"
            style="@style/sub_title_textView"
            android:layout_margin="@dimen/default_margin_padding"
            android:background="@drawable/bg_20_curved_light_gray_borders_white_filled"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/revisions"
            android:textSize="@dimen/sub_title_text_size"
            app:drawableEndCompat="@drawable/round_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/icon_star_rating" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/addNewProject_btn"
            style="@style/sub_title_textView"
            android:layout_margin="@dimen/default_margin_padding"
            android:background="@drawable/bg_20_curved_light_gray_borders_white_filled"
            android:clickable="false"
            android:elevation="5dp"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/add_a_project"
            android:textSize="@dimen/sub_title_text_size"
            app:drawableEndCompat="@drawable/round_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/icon_add_project" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/projectInvitations_btn"
            style="@style/sub_title_textView"
            android:layout_margin="@dimen/default_margin_padding"
            android:background="@drawable/bg_20_curved_light_gray_borders_white_filled"
            android:elevation="5dp"
            android:focusable="true"
            android:padding="10dp"
            android:text="دعوات إنشاء المشاريع"
            android:textSize="@dimen/sub_title_text_size"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/round_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/icon_files_on_hand"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/personal_information_tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_padding"
            android:padding="4dp"
            android:text="@string/technical_support"
            android:textColor="@color/accent"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/techSupport_btn"
            style="@style/sub_title_textView"
            android:layout_margin="@dimen/default_margin_padding"
            android:background="@drawable/bg_20_curved_light_gray_borders_white_filled"
            android:elevation="5dp"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/technical_support_tickets"
            android:textSize="@dimen/sub_title_text_size"
            app:drawableEndCompat="@drawable/round_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/tech_sport_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>